# flashdreams

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEV.md  NOTICE  PERFORMANCE.md  README.md  REUSE.toml  THIRD-PARTY-NOTICES  download_scenes.bat  index.html  pyproject.toml  run_interactive_drive.bat  run_lingbot.bat  run_webrtc_server.bat  setup.py
.github/workflows/: ci.yml  doc.yml  omnidreams-worldlens-canary.yml  reuse-lint.yml  video-quality-regression.yml
agentic/skills/flashdreams-recipes/: SKILL.md
agentic/skills/integrate-a-model/: SKILL.md
agentic/skills/python-docstring-style/: SKILL.md
assets/: upload.sh
configs/: video_quality_cases.yml
docker/: README.md  build_with_docker.sh
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: cli.rst  index.rst
docs/source/apis/: recipes.rst
docs/source/community/: discord.rst
docs/source/developer_guides/: config_system.rst  index.rst  inference_pipeline_overview.rst  interactive_serving.rst  new_integration.rst  new_recipes.rst  usage_patterns.rst
docs/source/examples/: alpadreams.rst  causal_forcing.rst  causal_wan22.rst  lingbot_world.rst  omnidreams.rst  self_forcing.rst  wan21.rst
docs/source/getting_started/: supported_models.rst
docs/source/models/: causal_forcing.rst  causal_wan22.rst  cosmos_predict2.rst  flashvsr.rst  index.rst  lingbot_world.rst  omnidreams.rst  self_forcing.rst  wan21.rst
docs/source/quickstart/: first_world_model.rst  installation.rst
flashdreams/: pyproject.toml
flashdreams/examples/: run_alpadreams.py
flashdreams/flashdreams/: __init__.py  _version.py
flashdreams/flashdreams/configs/: __init__.py  registry.py  runner_configs.py
flashdreams/flashdreams/infra/: cuda_graph.py  profiler.py  runner.py
flashdreams/flashdreams/plugins/: __init__.py  registry.py
flashdreams/flashdreams/scripts/: __init__.py  cli.py
flashdreams/scripts/: convert_i4_dcp2pt.py
flashdreams/tests/: perf_rope.py  test_alpadreams.py  test_checkpoint.py  test_cuda_graph.py  test_disk_space.py  test_hf_io.py  test_internal_storage.py  test_kvcache.py  test_model_instantiation.py  test_recipe_configs.py  test_recipe_plugins.py  test_rope_kernel.py  test_template.py  test_vae.py  test_video_quality_regression.py  test_video_vae_tyro_cli.py  test_wan_context_parallel.py  test_wan_pipeline.py  test_webrtc_serving.py
flashdreams/tests/taehv/: _profile_taehv.py  test_taehv_equivalence.py
flashdreams/tests/wanvae/: _profile_wan_vae.py  test_wan_vae_equivalence.py
flashsim/configs/: alpadreams.py  lingbot_world.py
flashsim/io/: s3_filesystem.py  s3_sync.py
flashsim/model/text_encoder/: cosmos_reason1.py  mock.py  wan2_1.py
flashsim/model/video_dit/: base.py  mock.py
flashsim/model/video_vae/: mock.py  pshuffle.py  teahv.py  wan.py
flashsim/pipeline/: alpadreams.py  lingbot_world.py  mock.py  wan2_1.py  wan2_2.py
integrations/alpadreams/: pyproject.toml
integrations/alpadreams/alpadreams/: config.py  constants.py  pipeline.py
integrations/alpadreams/scripts/: convert_i4_dcp2pt.py
integrations/alpadreams/tests/: conftest.py  test_alpadreams_pipeline.py  (+7 more)
integrations/causal_forcing/: README.md  pyproject.toml
integrations/cosmos_predict2/: README.md  pyproject.toml
integrations/fastvideo_causal_wan22/: README.md  pyproject.toml
integrations/flashvsr/: README.md  pyproject.toml
integrations/flashvsr/tests/parity_check/: README.md  pyproject.toml  run.sh  test_dit_parity.py
integrations/lingbot/: README.md  pyproject.toml
integrations/omnidreams/: README.md  compile_protos.sh  pyproject.toml
integrations/self_forcing/: README.md  pyproject.toml
integrations/wan21/: README.md  pyproject.toml
main/: .buildinfo  documentation.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html
main/_modules/: index.html
main/_static/: custom.css  language_data.js
main/api/: cli.html  core.html  index.html  infra.html  integrations.html  serving.html
main/community/: contribute.html  discord.html  faq.html  index.html  support.html
main/developer_guides/: config_system.html  index.html  inference_pipeline_overview.html  interactive_serving.html  latency_tuning.html  new_integration.html  usage_patterns.html
main/models/: causal_forcing.html  causal_wan22.html  cosmos_predict2.html  flashvsr.html  index.html  lingbot_world.html  omnidreams.html  self_forcing.html  wan21.html
main/quickstart/: first_world_model.html  index.html  installation.html
projects/lingbot_world/: camera_utils.py  pipeline.py
projects/streaming_ws/: README.md  __init__.py  __main__.py  client.py  protocol.py  server.py  stub_frames.py  viser_app.py
scripts/: run_alpadreams_inference.py  run_lingbot_world.py  run_wan2_2_i2v.py  run_wan_t2v.py
tests/: README.md  run_tests_docker.sh  run_tests_slurm.sh  test_alpadreams.py  test_streaming_ws_protocol.py  test_vae.py
tools/: __init__.py
tools/video_quality/: __init__.py  run_regression.py
(+312 files in other folders)
